--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "deepview",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "front_test": "react-scripts test",
-    "back_test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"npm run client\" \"npm run server\"",
-    "server": "nodemon server/app.js",
-    "client": "npm start --prefix client"
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:server": "npm --workspace server run dev",
+    "dev:client": "npm --workspace client run dev",
+    "build": "npm run build:server && npm run build:client",
+    "build:server": "npm --workspace server run build",
+    "build:client": "npm --workspace client run build",
+    "lint": "eslint \"packages/**/*.{ts,tsx}\" --fix",
+    "start": "concurrently  \"cd packages/client && npm --workspace client start\" \"cd packages/server && npm --workspace server start\""
   },
   "repository": {
     "type": "git",
@@ -21,26 +26,8 @@
   },
   "homepage": "https://github.com/Uchipo/DeepView#readme",
   "dependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "concurrently": "^9.1.2",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "express-validator": "^7.2.1",
-    "jest": "^27.5.1",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.1",
-    "nodemon": "^3.1.10",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-scripts": "^5.0.1",
-    "web-vitals": "^4.2.4"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.26.0",
-    "eslint": "^8.57.1",
-    "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.1.0"
+    "concurrently": "^8.2.2",
+    "eslint": "^8.x",
+    "prettier": "^2.x"
   }
 }
