--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,11 +1,24 @@
 {
-    "extends": "../../tsconfig.base.json",
-    "compilerOptions": {
-        "baseUrl":".",
-        "paths":{
-            "@/*":["src/*"]
-        },
-        "outDir": "dist",
-        "composite": true 
-    }
+  "extends": "../../tsconfig.base.json",
+  "references": [],
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "composite": true,
+    "baseUrl": "src",
+    "outDir": "dist",
+    "rootDir": "src",
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "noEmit": true,
+    "skipLibCheck": true,
+    "jsx": "react-jsx",
+  },
+  "include": ["src/**/*"]
 }
