--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,56 +1,56 @@
 {
-    "name": "client",
-    "version": "1.0.0",
-    "main": "app.ts",
-    "private": true,
-    "dependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1",
-        "web-vitals": "^3.1.1",
-        "@testing-library/dom": "^10.4.0",
-        "@testing-library/jest-dom": "^6.6.3",
-        "@testing-library/react": "^16.3.0",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.5.2",
-        "@types/node": "^16.18.126",
-        "@types/react": "^19.1.2",
-        "@types/react-dom": "^19.1.2",
-        "@types/react-router-dom": "^5.3.3",
-        "axios": "^1.9.0",
-        "styled-components": "^6.1.17",
-        "tsc": "^2.0.4",
-        "zustand": "^5.0.4"
-    },
-    "scripts": {
-        "start": "craco start",
-        "build": "craco build",
-        "test":  "craco test",
-        "eject": "react-scripts eject",
-        "typecheck": "tsc --noEmit --skipLibCheck"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "@craco/craco": "^7.1.0",
-        "@types/react-slick": "^0.23.13",
-        "msw": "^2.8.2",
-        "typescript": "^4.9.5"
-    }
+  "name": "@deepview/client",
+  "version": "1.0.0",
+  "main": "app.ts",
+  "private": true,
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^3.1.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.126",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.9.0",
+    "styled-components": "^6.1.17",
+    "tsc": "^2.0.4",
+    "zustand": "^5.0.4"
+  },
+  "scripts": {
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "react-scripts eject",
+    "typecheck": "tsc --noEmit --skipLibCheck"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "devDependencies": {
+    "@craco/craco": "^7.1.0",
+    "@types/react-slick": "^0.23.13",
+    "msw": "^2.8.2",
+    "typescript": "^4.9.5"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
