--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,8 @@
 {
   "extends": "./tsconfig.base.json",
-  "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": ".",
-    "target": "ES2020",
-    "module": "esnext",
-    "strict": true,
-    "esModuleInterop": true
-  },
+  "references": [
+    { "path": "packages/server" },
+    { "path": "packages/client" }
+  ],
   "include": ["packages/**/*"]
 }
