--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -2,9 +2,9 @@
   "extends": "../../tsconfig.base.json",
   "references": [],
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "target": "ES6",
+    "module": "ES6",
+    "moduleResolution": "node",
     "composite": true,
     "baseUrl": "src",
     "outDir": "dist",
